syntax = "proto3";

package ch.ubique.swisscovid.cn.sdk.backend.model;
option java_package = "ch.ubique.swisscovid.cn.sdk.backend.model.v3";

message AssociatedData {
  int32 version = 1;
  string message = 2;
  int64 startTimestamp = 3;
  int64 endTimestamp = 4;
  bytes countryData = 5;
}