syntax = "proto3";

package ch.ubique.swisscovid.cn.sdk.backend.model;
option java_package = "ch.ubique.swisscovid.cn.sdk.backend.model.v3";

message SwissCovidAssociatedData {
  int32 version = 1;
  EventCriticality criticality = 2;
}
enum EventCriticality {
  LOW = 0;
  HIGH = 1;
}